test/corpus/repeat_comments.txt
==================
Repeat leading comments preserve nested bodies
==================
flow research:
  repeat 2 times:
    ## Gather fresh evidence for each review.
    run search
    ## Refine the evidence before the next search.
    repeat:
      # Keep revisions within the provider quota.
      ## Address the strongest remaining objection.
      run revise
      until: Stop refining.
    until: Stop researching.

---

(source_file
  (flow
    (flow_keyword)
    (runnable_name)
    (colon)
    (line_end
      (newline))
    (flow_body
      (statements
        (repeat_statement
          (flow_repeat_keyword)
          (integer_literal)
          (flow_times_keyword)
          (colon)
          (line_end
            (newline))
          (repeat_body
            (item_doc_comment
              (comment_text))
            (run_statement
              (flow_run_keyword)
              (runnable_name)
              (line_end
                (newline)))
            (item_doc_comment
              (comment_text))
            (repeat_statement
              (flow_repeat_keyword)
              (colon)
              (line_end
                (newline))
              (repeat_body
                (plain_comment)
                (item_doc_comment
                  (comment_text))
                (run_statement
                  (flow_run_keyword)
                  (runnable_name)
                  (line_end
                    (newline)))
                (until_clause
                  (flow_until_keyword)
                  (inline_agic_body
                    (colon)
                    (text_inline
                      (text_line)
                      (line_end
                        (newline)))))))
            (until_clause
              (flow_until_keyword)
              (inline_agic_body
                (colon)
                (text_inline
                  (text_line)
                  (line_end
                    (newline)))))))))))
